fix: change column gap in paymnets list

--- a/styles/table.css
+++ b/styles/table.css
@@ -1,5 +1,6 @@
 .table-section {
     width: 100%;
+    overflow-x: hidden;
 }
 
 .table {
